# exp3

./: CHANGELOG.md  Cargo.toml  README.md
src/: blend.rs  lib.rs  parameter.rs  type.rs
