[package]
name = "exp3"
version = "0.2.0"
edition = "2021"
authors = ["Chris Olstrom <chris@olstrom.com>"]
license = "MIT"
repository = "https://github.com/vtubing/exp3"
documentation = "https://docs.rs/exp3"
description = "data types for (de)serializing expression settings from exp3.json files"

[dependencies]
remain = "^ 0.2"
serde = { version = "^ 1", features = ["derive"] }
serde_json = { version = "^ 1", features = ["preserve_order"] }
